xrpl-wasm-stdlib/xrpl-macros/tests/blob/fail_invalid_chars.stderr
error: Invalid blob hex: ZZZZ
 --> tests/blob/fail_invalid_chars.rs:5:11
  |
5 |     blob!("ZZZZ");
  |           ^^^^^^
