xrpl-wasm-stdlib/xrpl-macros/tests/blob/fail_invalid_chars.rs
use xrpl_macros::blob;

// Only [0-9a-fA-F] are valid hex characters. 'Z' must be rejected.
fn main() {
    blob!("ZZZZ");
}
